[metadata]
name = matriosca
description = Command line tool and Python library for data encryption
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/matriosca
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    matriosca = matriosca.__main__:main
